Fixed video border-radius issue on safari mobile

--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -68,8 +68,10 @@
         min-width: 300px;
     }
 
-    .video {
+    .video, 
+    video {
         border-radius: 90%;
+        -webkit-border-radius: 90%;
     }
 
     .profileImageMobile {
