--- a/styles/styles.css
+++ b/styles/styles.css
@@ -473,8 +473,10 @@ a:focus {
   min-width: 300px;
 }
 
-.header .video {
+.header .video,
+.header video {
   border-radius: 90%;
+  -webkit-border-radius: 90%;
 }
 
 .header .profileImageMobile {
